traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:19: error: Boolean does not take parameters
  if (PositionFinale==true)(getY()==6){
                                      ^